--- a/ai-powered-search/13-semantic-search/02_autocomplete.ipynb
+++ b/ai-powered-search/13-semantic-search/02_autocomplete.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNGJWpRjrgBKn1wamx4SQvL",
+      "authorship_tag": "ABX9TyOjAuoS0pFn3oQYLhs1fo1A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "vAmm7hi_YwM7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "OpdeArD_hm1V"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,22 +201,10 @@
         "outdoors_dataframe = cleanDataset('outdoors/data/outdoors/posts.csv')"
       ],
       "metadata": {
-        "id": "VNjnWT_ufOxJ",
-        "outputId": "986e3a91-aaa7-45a0-cede-37d489a6c85b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "VNjnWT_ufOxJ"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/content/outdoors.py:10: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -230,7 +218,7 @@
         "id": "FLPUI2fJjjsI",
         "outputId": "ca82d375-2ca5-4dac-90ff-59a18be6bf8a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +247,7 @@
       "metadata": {
         "id": "nf0yDTewqg3Z"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,11 +259,11 @@
         "    #normalizes a noun or verb phrase\n",
         "    return ' '.join([tok.lemma_.lower() for tok in span])\n",
         "\n",
-        "def yield_tuple(df,column,total=100):\n",
+        "def yield_tuple(df, column, total=100):\n",
         "    #yields a spacy nlp.pipe compliant tuple of the column text values and its dataframe row as the context\n",
-        "    for idx,row in df.iterrows():\n",
-        "        if idx<total:\n",
-        "            yield (row[column],idx)\n",
+        "    for idx, row in df.iterrows():\n",
+        "        if idx < total:\n",
+        "            yield (row[column], idx)\n",
         "\n",
         "def get_concepts(df, total=None, load_from_cache=True):\n",
         "\n",
@@ -284,7 +272,7 @@
         "            concepts = pickle.load(fd)\n",
         "        with open(labels_pickle_path,'rb') as fd:\n",
         "            labels = pickle.load(fd)\n",
-        "        return concepts,labels\n",
+        "        return concepts, labels\n",
         "\n",
         "    #Setting load_from_cache to False will bring you here\n",
         "    print('Extracting concepts. This could take a while. Take a break and stretch :)')\n",
@@ -304,10 +292,10 @@
         "    verbtags = ['VB','VBD','VBG','VBN','VBP','VBZ','VERB'] #Verbs\n",
         "    matcher.add(\"noun_phrases\", [[{\"TAG\":{\"IN\": nountags}, \"IS_ALPHA\": True,\"OP\":\"+\"}]])\n",
         "    matcher.add(\"verb_phrases\", [[{\"TAG\":{\"IN\": verbtags}, \"IS_ALPHA\": True,\"OP\":\"+\", \"LEMMA\":{\"NOT_IN\":[\"be\"]}}]])\n",
-        "    for doc,idx in tqdm.tqdm(nlp.pipe(yield_tuple(df,\"body\",total=total), batch_size=40, n_threads=4, as_tuples=True),total=total):\n",
+        "    for doc, idx in tqdm.tqdm(nlp.pipe(yield_tuple(df, \"body\", total=total), batch_size=40, n_threads=4, as_tuples=True), total=total):\n",
         "        text = doc.text\n",
         "        matches = matcher(doc)\n",
-        "        for matchid,start,end in matches:\n",
+        "        for matchid, start, end in matches:\n",
         "            span = doc[start:end]\n",
         "            phrases.append(normalize(span))\n",
         "            sources.append(span.text)\n",
@@ -325,17 +313,17 @@
         "\n",
         "    sorted_concepts = {k: v for k, v in sorted(concepts.items(), key=lambda item: item[1], reverse=True)}\n",
         "\n",
-        "    with open(concepts_pickle_path,'wb') as fd:\n",
-        "        pickle.dump(sorted_concepts,fd)\n",
-        "    with open(labels_pickle_path,'wb') as fd:\n",
-        "        pickle.dump(labels,fd)\n",
+        "    with open(concepts_pickle_path, 'wb') as fd:\n",
+        "        pickle.dump(sorted_concepts, fd)\n",
+        "    with open(labels_pickle_path, 'wb') as fd:\n",
+        "        pickle.dump(labels, fd)\n",
         "\n",
-        "    return sorted_concepts,labels"
+        "    return sorted_concepts, labels"
       ],
       "metadata": {
         "id": "8sd1a0Fjj0O7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -365,7 +353,7 @@
         "id": "98wlKXcmkiE0",
         "outputId": "26e8f6ad-c0b3-4a59-81b7-685e389fcf9d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +409,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +440,7 @@
       "metadata": {
         "id": "z35iidwErUby"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -473,7 +461,7 @@
       "metadata": {
         "id": "LIxJysUPZX2S"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -488,7 +476,7 @@
       "metadata": {
         "id": "0cSyKodluMUD"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +495,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +530,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,7 +567,7 @@
         "id": "eY4aAFjHcMcE",
         "outputId": "582b071f-f14c-4c69-8be3-ff249082135e"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +911,7 @@
           "height": 464
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -965,7 +953,7 @@
           "height": 464
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1005,7 +993,7 @@
           "height": 464
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1060,7 +1048,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1086,7 +1074,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1111,13 +1099,13 @@
         "    if distance > 0.75:\n",
         "      matches.append((text, distance))\n",
         "  if not len(matches):\n",
-        "    matches.append((phrases[ids[1]], 1.0 - distances[id]))\n",
+        "    matches.append((phrases[ids[1]], 1.0 - distances[1]))\n",
         "  return matches"
       ],
       "metadata": {
         "id": "-HAMqQdA69PI"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1134,12 +1122,12 @@
         "\n",
         "def autocomplete(prefix):\n",
         "  matches = semantic_suggest(prefix)\n",
-        "  print_labels(prefix,matches)"
+        "  print_labels(prefix, matches)"
       ],
       "metadata": {
         "id": "yQms7_R8DC17"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1155,7 +1143,7 @@
           "height": 196
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1198,7 +1186,7 @@
           "height": 248
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1244,7 +1232,7 @@
           "height": 231
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1289,7 +1277,7 @@
           "height": 213
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1333,7 +1321,7 @@
           "height": 74
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1377,7 +1365,7 @@
       "metadata": {
         "id": "c2dvuQTIbuJd"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1435,7 +1423,7 @@
           "height": 875
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
