--- a/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
+++ b/machine-learning-with-python-cookbook/01_working_with_vector_and_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgcGI4eTq5CfLq+U1FoIV7",
+      "authorship_tag": "ABX9TyPKTWfAf1PrDMVc44R/k1bq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B2azLQjB0cJt",
-        "outputId": "600ab2ca-25fb-4e1a-d432-4007472a040a"
+        "outputId": "02ed11eb-4ddc-4aa6-d860-0305aec39d76"
       },
       "execution_count": 2,
       "outputs": [
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2lgYnstk1ctC",
-        "outputId": "2692a4b1-b5a0-45a7-ab4b-31eedb462d46"
+        "outputId": "8ffe9731-0b97-40b2-9cbf-3e457b6744cd"
       },
       "execution_count": 3,
       "outputs": [
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eUvMCmwz1_Bm",
-        "outputId": "20c90fe2-a868-419b-86a0-be45d651f614"
+        "outputId": "a7694f1c-f9db-4bba-d0ca-f2159096ab6e"
       },
       "execution_count": 4,
       "outputs": [
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xF4HutED2Ygc",
-        "outputId": "33f0cc44-a914-46b6-e2da-696341844214"
+        "outputId": "b3fe6de6-c6b1-4200-998e-dce81e75cea2"
       },
       "execution_count": 5,
       "outputs": [
@@ -196,7 +196,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s3r7EWHt2fg-",
-        "outputId": "9cdf062d-f1e8-4423-dc2b-990e1881acf2"
+        "outputId": "b74c9304-f337-4a8a-997b-8ffc987153d7"
       },
       "execution_count": 6,
       "outputs": [
@@ -223,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Qa8S3Dq3Sar",
-        "outputId": "86af03c9-250b-4990-b850-262cc1812f61"
+        "outputId": "c8fc625e-958b-4e62-a001-22de29daf104"
       },
       "execution_count": 7,
       "outputs": [
@@ -250,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gZVfsxd33XpZ",
-        "outputId": "06567972-849a-45e3-e1d2-cb733d6c0bf6"
+        "outputId": "e480b790-0f5b-4b47-ea62-8cd721fe5a56"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -277,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JCEZDbJT3ZrQ",
-        "outputId": "2a35061d-286d-4e3c-8d72-b7e9ba82b629"
+        "outputId": "51fddfc3-98e6-4a17-80c8-a6a91914430d"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uzrKjc0S3gv2",
-        "outputId": "046ad779-91c1-4a10-f275-90505533305f"
+        "outputId": "16fc71f9-3919-47f9-f209-6c8fb9a463fb"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +316,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -331,9 +331,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5JgLmA1h3nAn",
-        "outputId": "2ec5edbe-b629-4d2f-dd37-689a0c9deb09"
+        "outputId": "f88bd512-52dd-4f94-bac4-81b92b630844"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +343,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -357,9 +357,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3NKsUA2g393k",
-        "outputId": "14c52e12-6d98-41a9-84db-5ca8cbf89073"
+        "outputId": "de863c03-8699-4a95-a8de-a54e048c7a5b"
       },
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 12
         }
       ]
     },
@@ -386,9 +386,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ddMSWw0X3tlT",
-        "outputId": "78774e74-8358-4588-9706-1b7a03b1df8a"
+        "outputId": "fba4b286-f7b5-404d-b235-2442d671a4fa"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -414,9 +414,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_lSHjgS132rO",
-        "outputId": "bc9a500f-7ed4-4a0d-d927-4a7a6cd1e50a"
+        "outputId": "3285a0e1-b934-49be-90d8-c026a1ce1a5e"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 14
         }
       ]
     },
@@ -442,9 +442,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uHIn1Vpl4JCv",
-        "outputId": "2b3eecc7-f63b-44a7-8221-17c6ffb9c9c5"
+        "outputId": "7a25b888-cca2-4e1d-d007-1e920361f126"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,7 +456,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
     },
@@ -470,9 +470,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YXeB4y_y4RkX",
-        "outputId": "f69b6baf-449a-4a46-9994-32232c97a875"
+        "outputId": "2e9f69e2-7c22-4d61-c437-7da7d1e4f48a"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +484,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -515,9 +515,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2MjiNWDJ4YHz",
-        "outputId": "5abefe87-ec1a-4009-f9a9-82ea07c0ec67"
+        "outputId": "5a590e9e-c070-4376-d13a-44103d26169d"
       },
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 17
         }
       ]
     },
@@ -542,9 +542,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRjOeoYf4uWw",
-        "outputId": "0ab97afb-4bae-45eb-9be6-a946764d1fe6"
+        "outputId": "757a3275-399e-4fe2-e830-0648d13ac206"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +554,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 18
         }
       ]
     },
@@ -569,9 +569,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2c7myP9240G9",
-        "outputId": "2e414162-c2a6-4462-82c4-ade7f4734c77"
+        "outputId": "2b4381e0-58ff-4c6b-f643-9d547b22c93a"
       },
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +581,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 19
         }
       ]
     },
@@ -596,9 +596,213 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Create function that adds 100 to something\n",
+        "add_100 = lambda i: i + 100\n",
+        "\n",
+        "# Create vectorized function\n",
+        "vectorized_add_100 = np.vectorize(add_100)\n",
+        "\n",
+        "# Apply function to all elements in matrix\n",
+        "vectorized_add_100(matrix)"
+      ],
+      "metadata": {
+        "id": "7JUrlg905CFf",
+        "outputId": "5117be1b-ef18-4699-b8a1-55f6a8bf1ac4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[101, 102, 103],\n",
+              "       [104, 105, 106],\n",
+              "       [107, 108, 109]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# we can create a much simpler version of our solution using broadcasting\n",
+        "matrix + 100"
+      ],
+      "metadata": {
+        "id": "OyAweszWJQEj",
+        "outputId": "545793c5-ce09-42b2-cfcd-bda697fdd384",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[101, 102, 103],\n",
+              "       [104, 105, 106],\n",
+              "       [107, 108, 109]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Finding Maximum and Minimum Values"
+      ],
+      "metadata": {
+        "id": "opy2BeQ4JfEt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create matrix\n",
+        "matrix = np.array([\n",
+        "    [1, 2, 3],\n",
+        "    [4, 5, 6],\n",
+        "    [7, 8, 9]\n",
+        "])\n",
+        "\n",
+        "# Return maximum element\n",
+        "np.max(matrix)"
+      ],
+      "metadata": {
+        "id": "dfPJCwFXJgmC",
+        "outputId": "960ca0b3-2331-43c6-d579-ecdc0eac09e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Return minimum element\n",
+        "np.min(matrix)"
+      ],
+      "metadata": {
+        "id": "znSw5oRbJzs0",
+        "outputId": "47fb4cc0-d6a8-4469-8c9b-83a710b5ebb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find maximum element in each column\n",
+        "np.max(matrix, axis=0)"
+      ],
+      "metadata": {
+        "id": "W4ZMVEWKKDQm",
+        "outputId": "0d884302-a57f-460e-85e1-e72689f1d6f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find maximum element in each row\n",
+        "np.max(matrix, axis=1)"
+      ],
+      "metadata": {
+        "id": "Meq6qPWHKGR9",
+        "outputId": "25302be2-94e3-4cd2-a8d2-c5921ca5b5c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 6, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Calculating Average, Variance, and Standard Deviation"
+      ],
+      "metadata": {
+        "id": "ysNFLWGYngCG"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7JUrlg905CFf"
+        "id": "eb3ClXmTnigk"
       },
       "execution_count": null,
       "outputs": []
